--- a/templates/companies_list.html
+++ b/templates/companies_list.html
@@ -2,7 +2,7 @@
 <html lang="ru" prefix="og: http://ogp.me/ns#">
 <head>
   <meta charset="utf-8">
-  <title>Тарифы</title>
+  <title>Компании</title>
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
   <link rel="stylesheet" href="https://bootstrap5.ru/css/docs.css">
@@ -16,13 +16,13 @@
   <meta name="theme-color" content="#7952b3">
   <!-- Facebook -->
 
-      <style>
-      body {
-          font-family: SF
-    }
-    </style>
 <style>
 
+      @font-face { font-family: SF; src: url('SFProDisplay-Regular.ttf'); }
+
+      body {
+          font-family: trebuchet ms
+    }
 
         .bd-placeholder-img {
           font-size: 1.125rem;
@@ -48,14 +48,13 @@
         }
 
 
-  </style>
-  </style>
+</style>
 </head>
 
 <body>
      <nav class="navbar navbar" style="background: #060424">
   <div class="container-fluid">
-    <a class="navbar-brand" href="home" style="color: #ffc708"><img src="https://cdn.icon-icons.com/icons2/1910/PNG/512/pear_121458.png" width="40" height="40"></img>Торговый бот</a>
+    <a class="navbar-brand" href="../home/{{user}}" style="color: #ffc708"><img src="https://cdn.icon-icons.com/icons2/1910/PNG/512/pear_121458.png" width="40" height="40">Торговый бот</a>
      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample01" aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation" style="border: 3px solid #ffc708">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -63,24 +62,21 @@
     <div class="collapse navbar-collapse" id="navbarsExample01">
       <ul class="navbar-nav mr-auto mb-2">
         <li class="nav-item active">
-          <a class="nav-link" aria-current="page" href="home">Главная</a>
+          <a class="nav-link" aria-current="page" href="../home/{{user}}">Главная</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="rates">Тарифы</a>
+          <a class="nav-link" href="../rates/{{user}}">Тарифы</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="companies_list">Компании</a>
+          <a class="nav-link" href="../companies_list/{{user}}">Компании</a>
         </li>
       </ul>
-      <form>
-        <input class="form-control" type="text" placeholder="Поиск" aria-label="Search">
-      </form>
     </div>
   </div>
 </nav>
 
    <div class="text-center">
-       <h2>Другие компании</h2>
+       <h2>Компании</h2>
     <h3>Все компании, которые мы анализируем</h3>
 
     <table align="center">
@@ -93,7 +89,7 @@
             <tbody>
                 {% for row in companies %}
                     <tr>
-                        <td><a href={{ "company/" + row[0] }}>{{ row[0] }}</a></td>
+                        <td><a href="../company/{{ user }}/{{ row[0] }}">{{ row[0] }}</a></td>
                         <td><img src={{row[1]}} width="72" > </td>
                     </tr>
                 {% endfor %}
