--- a/templates/home.html
+++ b/templates/home.html
@@ -18,8 +18,10 @@
 
 
   <style>
+      @font-face { font-family: SF; src: url('SFProDisplay-Regular.ttf'); }
+
       body {
-          font-family: SF
+          font-family: trebuchet ms
     }
     </style>
   <style>
@@ -119,10 +121,11 @@
 
       <h3 class="float-md-left mb-0" style="color: #ffc708"><img src="https://cdn.icon-icons.com/icons2/1910/PNG/512/pear_121458.png" width="40" height="40"></img>Торговый бот</h3>
       <nav class="nav nav-masthead justify-content-center float-md-right">
-        <a class="nav-link active" aria-current="page" style="color: #ffc708" href="home">Главная</a>
-        <a class="nav-link" style="color: #ffc708" href="rates">Тарифы</a>
-        <a class="nav-link" style="color: #ffc708" href="companies_list">Компании</a>
-        <a class="nav-link" style="color: #ffc708" href="login">Войти</a>
+            <a class="nav-link active" aria-current="page" style="color: #ffc708" href="home">Главная</a>
+            <a class="nav-link" style="color: #ffc708" href="../rates/{{user}}">Тарифы</a>
+            <a class="nav-link" style="color: #ffc708" href="../companies_list/{{user}}">Компании</a>
+            <a class="nav-link" style="color: #ffc708" href="../login">Войти</a>
+
       </nav>
     </div>
   </header>
@@ -133,13 +136,17 @@
     <p class="lead">Наша цель - облегчить Ваше существование в этом тяжелом мире.</p>
 
     <p class="lead">
-      <a href="companies_list" class="btn btn-outline-warning">Подробнее</a>
+      <a href="../companies_list/{{user}}" class="btn btn-outline-warning">Подробнее</a>
     </p>
   </main>
 
-
+  {% if user != "default" %}
+      <h1 style="color: #ffc708">Вы успешно авторизировались</h1>
+  {% else %}
+      <h1 style="color: #ffc708">Вам необходимо авторизоваться</h1>
+  {% endif %}
   <footer class="mt-auto text-white-50">
-    <p>Торговый бот, от <a href="https://vk.com/ly2sch" class="text-white">Л2Ш</a>.</p>
+    <p>Торговый бот от <a href="https://vk.com/ly2sch" class="text-white">Л2Ш</a>.</p>
   </footer>
 </div><script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.bundle.min.js"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
